--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <header>Regisration</header>
+        <header>Update Profile</header>
     
         <form action="#">
     
